syntax = "proto3";

service DIDASchedulerService {
  rpc SendScript (SendScriptRequest) returns (SendScriptReply);
}

message SendScriptRequest {
	repeated string app = 1;
}

message SendScriptReply {
	bool ack = 1;
}